--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="nav-about button" onclick="switchToPage(2);">About</div>
         <div class="nav-sub button" onclick="switchToPage(3);">Sub</div>
         <div class="nav-programs button" onclick="switchToPage(4);">Programs</div>
-        <div class="nav-future_programs button" onclick="switchToPage(5);">Future Programs   </div>
+        <div class="nav-games button" onclick="switchToPage(5);">Games</div>
         </nav>
 
     <!--Home-->
@@ -170,11 +170,6 @@
     <!--Programs-->
     <div class="page" id="programs">
     This is the programs page
-    </div>
-
-    <!--Future Programs-->
-    <div class="page" id="future_programs">
-    This is the future programs page
     </div>
     
     <!--Games-->
