--- a/index.html
+++ b/index.html
@@ -193,13 +193,15 @@
         window.addEventListener("load", function() {
             document.getElementById("loader").style.textDecoration = "underline";
         });
+    </script>
         
+    <script>
         function show_hide() {
-          var l = document.getElementById("daDiv");
-          if (l.style.display === "none") {
-            l.style.display = "block";
+          var x = document.getElementById("daDiv");
+          if (x.style.display === "none") {
+            x.style.display = "block";
           } else {
-            l.style.display = "none";
+            x.style.display = "none";
           }
         }
     </script>
