--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <!--Games-->
     <div class="page" id="games">
         <button onClick="show_hide">Dodge Game</button>
-        <div id="daDiv"> <!--<canvas id="mycanvas"></canvas>-->
-            <p>Hi</p>
+        <div id="daDiv">
+            <canvas id="mycanvas"></canvas>
         </div>
     </div>
         
