--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <head>
         <meta charset="utf-8">
-        <title>HTML Lab</title>
+        <title>Winter.com</title>
         <style>
             @keyframes fadeIn {
                 100% {
