--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
             body{
                 background: gray;
             }
+            footer{
+                color: black;
+                text-align: center;
+                background-color: orange;
+                padding: 5px;
+            }
         </style>
     </head>
     <body>
@@ -177,7 +183,9 @@
         <canvas id="dodgeGame"></canvas>
     </div>
         
-    <footer></footer>
+    <footer>
+        <p>Copyright Winter 2021</p>
+    </footer>
 
     <script>
         var pages = document.getElementsByClassName("page")
