--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             footer{
                 color: black;
                 text-align: center;
-                background-color: orange;
+                background-color: white;
                 padding: 5px;
             }
         </style>
@@ -184,7 +184,7 @@
     </div>
         
     <footer>
-        <p>Copyright Winter 2021</p>
+        <p>Copyright Winter<br>2021</p>
     </footer>
 
     <script>
