--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>CLOSED DOWN</title>
+    </head>
+    <body>
+      <h1>This website is CLOSED. I might redo it later.</h1>
 
+    </body>
+</html>
