--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@ Feedback on this website would be great :D
         <div class="nav-sub button" onclick="javascript:changePage(3);">Sub</div>
         <div class="nav-KAGames button" onclick="javascript:changePage(4);">KA Games</div>
         <div class="nav-miniGames button" onclick="javascript:changePage(5);">Mini Game</div>
+        <iframe src="https://api-chat-thingy.winter987.repl.co/"></iframe>
         </nav>
 
     <!--Home-->
