--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Feedback on this website would be great :D
         </style>
     </head>
     <body>
-        <iframe src="https://api-chat-thingy.winter987.repl.co/"></iframe>
+        <!--<iframe src="https://api-chat-thingy.winter987.repl.co/"></iframe>-->
         <div id="title">
         <h1>Winter.com</h1>
         <a href="#nav" id="explore_button">Explore</a>
