--- a/testing.html
+++ b/testing.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.youtube.com/watch?v=pvGFo-B68D0" height="400" width="600" title="5 hours of bugs bunny"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pvGFo-B68D0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
