--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Feedback on this website would be great :D
                 font-family: 'Oswald', sans-serif;
             }
             p{
-                font-family: 'comic sans MS', monospace;
+                font-family: 'Comic Sans MS', monospace;
                 text-align: center;
             }
             #cards{
