--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Feedback on this website would be great :D
     <nav id="nav">
         <div class="nav-home button" onclick="javascript:changePage(1);">Home</div>
         <div class="nav-about button" onclick="javascript:changePage(2);">About</div>
-        <div class="nav-sub button" onclick="javascript:changePage(3);">Sub</div>
+        <div class="nav-chat button" onclick="javascript:changePage(3);">Chat</div>
         <div class="nav-KAPrograms button" onclick="javascript:changePage(4);">KA Programs</div>
         <div class="nav-miniGames button" onclick="javascript:changePage(5);">Mini Game</div>
         </nav>
@@ -239,7 +239,7 @@ Feedback on this website would be great :D
     <!--About-->
     <div class="page">
         <h1 class="pages_titles">About</h1>
-        <p style="font-size: 18px">My brother intoduced me to coding back in the summer of 2020. I wasn't interested at first but then one day on KA I decided to just check out the CS courses on KA. I started learning it and got real interested. I started coding on KA on October 2020. I joined many competitions to practice my coding skills including TPT and Primavera. Here are some of the computer languages and stuff I use I know (Idea from <a href="https://leviathan-programming.cf/">Leviathan's Website!</a>):</p>
+        <p style="font-size: 18px">My brother intoduced me to coding back in the summer of 2020. I wasn't interested at first but then one day on KA I decided to just check out the CS courses on KA. I started learning it and got real interested. I started coding on KA on October 2020. I joined many competitions to practice my coding skills including TPT and Primavera. Here are some of the computer languages and stuff I use I know (Idea from <a href="https://leviathan-programming.cf/" onClick="_target">Leviathan's Website!</a>):</p>
         <div align="center">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/300px-HTML5_logo_and_wordmark.svg.png" width="120px">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/CSS.3.svg/1200px-CSS.3.svg.png" width="82.5px">
@@ -265,10 +265,10 @@ Feedback on this website would be great :D
         </script>
     </div>
 
-    <!--Sub-->
+    <!--Chat-->
     <div class="page">
-    <h1 class="pages_titles">Sub</h1>
-    <p>Subbing to me is easy! All you do is post a single period (.) or anything less than 3 characters in the sub thread below! If you sub to me you will be notified when i release games and other stuff i make on khan academy. Click <a href="https://www.khanacademy.org/computer-programming/wintercom/4602333877977088?qa_expand_key=ag5zfmtoYW4tYWNhZGVteXJACxIIVXNlckRhdGEiHWthaWRfMzM1Mjc5NTQwNTEyMTc3ODg1MTY2Njc0DAsSCEZlZWRiYWNrGICAvb_Il_0JDA">here</a> to see the sub thread.</p>
+    <h1 class="pages_titles">Chat</h1>
+    <iframe src="https://API-chat-for-my-website.winter987.repl.co"></iframe>
     </div>
 
     <!--Programs-->
