--- a/TrueOrFalse.html
+++ b/TrueOrFalse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
   <head>
-    <title>Calculator v1</title> 
+    <title>True Or False Game!</title> 
   </head>
   <body>
 	<!--This draws the canvas on the webpage -->
