--- a/WingsOfFire.html
+++ b/WingsOfFire.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
   <head>
-    <title>Hot Air Balloon</title> 
+    <title>Wings Of Fire Game (Work In Progress)</title> 
   </head>
   <body>
 	<!--This draws the canvas on the webpage -->
@@ -14,7 +14,7 @@
   <script>
   var programCode = function(processingInstance) {
     with (processingInstance) {
-      size(500, 600); 
+      size(600, 600); 
       frameRate(30);
         
       // Paste code from Khan Academy here:
