--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ Feedback on this website would be great :D
             </div>
             
             <div class="cards-section">
-                <p>Want to know how and why you should sub to me? Visit the sub tab.</p>
-                <button class = "nav-sub button" onClick="javascript:changePage(3);">Sub</button>
+                <p>Want to chat with random people on this site? Visit the Chat tab!</p>
+                <button class = "nav-sub button" onClick="javascript:changePage(3);">Chat</button>
             </div>
             
             <div class="cards-section">
