--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ Feedback on this website would be great :D
         <script>
             $.getJSON("https://www.khanacademy.org/api/internal/user/scratchpads?kaid=kaid_335279540512177885166674&format=pretty&limit=1000&callback=?", function(data){
             for(var i = 0; i < data.scratchpads.length; i++){
-                programs.innerHTML += "<a href="+data.scratchpads[i].url+"><img class='program' src=https://www.khanacademy.org"+data.scratchpads[i].thumb+" width='100'>"+data.scratchpads[i].title+"</a>";
+                programs.innerHTML += "<p id='programTitles'></p><a href="+data.scratchpads[i].url+"><img class='program' src=https://www.khanacademy.org"+data.scratchpads[i].thumb+" width='100'></a>";
             }
 })
         </script>
@@ -340,6 +340,11 @@ Feedback on this website would be great :D
         }
         changePage(1);
     </script>
+        var programTitles = document.getElementById("programTitles");
+        programTitles.innerHTML = data.scratchpads[i].title;
+     <script>
+        
+     </script>
 </body>
     <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.min.js"></script> 
     <script>
