--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Feedback on this website would be great :D
         <div class="nav-chat button" onclick="javascript:changePage(3);">Chat</div>
         <div class="nav-KAPrograms button" onclick="javascript:changePage(4);">KA Programs</div>
         <div class="nav-miniGames button" onclick="javascript:changePage(5);">Mini Game</div>
-        <div class="nav-websites button" onclick="javascript:changePage(6);">Websites I Made</div>
+        <div class="nav-search button" onclick="javascript:changePage(6);">Search</div>
         </nav>
 
     <!--Home-->
@@ -365,7 +365,9 @@ Feedback on this website would be great :D
      
      <!--Websites I Made-->
      <div class="page">
-      <h1 class="pages_titles">Websites I Made</h1>
+      <h1 class="pages_titles">Search</h1>
+      <script async src="https://cse.google.com/cse.js?cx=6d37872338ec201bd"></script>
+      <div class="gcse-search"></div>
      </div>
      
     <footer>
