--- a/index.html
+++ b/index.html
@@ -393,8 +393,12 @@ Feedback on this website would be great :D
         <div class="column">
                     <h3>Contact Me</h3>
                     <hr>
-                    <a href="https://www.khanacademy.org/profile/HTMLforthewin/">Winter's Profile</a>
-                    <a href="https://github.com/wintertheprogrammer">Winter's Github</a>
+                    <a href="https://www.khanacademy.org/profile/HTMLforthewin/">Khan Academy Profile</a>
+                    <a href="https://github.com/wintertheprogrammer">Github</a>
+                    <a href="https://discord.com/">Discord: winter#9572</a>
+                    <a href="https://replit.com/@Winter987">Replit</a>
+                    <a href="https://codepen.io/hamzalababidi/">CodePen</a>
+         
         </div>
         <div class="column">
                     <h3>Resources & Credit</h3>
