--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Feedback on this website would be great :D
         <div class="column">
                     <h3>Contact Me</h3>
                     <hr>
-                    <a href="https://www.khanacademy.org/profile/HTMLforthewin/">Khan Academy Profile</a>
+                    <a href="https://www.khanacademy.org/profile/HTMLforthewin/">Khan Academy</a>
                     <a href="https://github.com/wintertheprogrammer">Github</a>
                     <a href="https://discord.com/">Discord: winter#9572</a>
                     <a href="https://replit.com/@Winter987">Replit</a>
