--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ Feedback on this website would be great :D
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <head>
+        <link rel="icon" type="image/*" href="https://cdn.kastatic.org/images/avatars/svg/leaf-blue.svg">
         <meta charset="utf-8">
         <title>Winter.com</title>
         <style>
