--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ Feedback on this website would be great :D
                 font-family: 'Zen Dots', cursive; 
                 font-size: 25px;
             }
-            #title:hover{
+            /*#title:hover{
                 transform: scale(1.015);
                 font-size: 23px;
-            }
+            }*/
             .button{
                 color: blue;
                 background: lightblue;
