--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Feedback on this website would be great :D
                 }
             }
             #title{
-                background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6a/190212_Baeume-Winter-Strategien_header.jpg');
+                background-image: url('https://cdn.mos.cms.futurecdn.net/2LVWjEV65antgXRgEAXJRb.jpg');
                 background-size: 100%;
                 background-position: center;
                 height: 88vh;
