--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Feedback on this website would be great :D
     <body>
         <div id="title">
         <h1>Winter.com</h1>
-        <a href="#nav" id="explore_button">Explore</a>
+        <a href="#nav" id="button">Explore</a>
     </div>
     
     <nav id="nav">
