--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                color: blue;
+                color: rgba(0, 50, 200);
                 font-family: 'Zen Dots', cursive;
                 font-size: 25px;
             }
@@ -72,8 +72,9 @@
                 color: rgb(0, 150, 255);
             }
             #cards{
-                background: black;
-                padding: 10px;
+                /*background: black;*/
+                padding: 20px;
+                max-width: 500px;
             }
             #cards button {
                 display: block;
@@ -89,8 +90,10 @@
                 transform: scale(0.8);
                 padding: 1px;
             }
-            body{
+            html, body{
                 background: lightgray;
+                padding: 0;
+                margin: 0;
             }
             footer{
                 color: black;
