--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             #cards p {
                 font-size: 16px;
                 color: rgb(0, 50, 150);
-                text-shadow: 0 0 2px gray;
+                /*text-shadow: 0 0 2px gray;*/
             }
             .cards-section{
                 background: white;
