--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 color: rgb(0, 150, 255);
             }
             #cards{
-                /*background: black;*/
+                background: gray;
                 padding: 20px;
                 max-width: 500px;
             }
