--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             #cards{
                 background: gray;
                 padding: 20px;
-                max-width: 500px;
+                width: 100%;
             }
             #cards button {
                 display: block;
@@ -90,6 +90,7 @@
                 background: white;
                 transform: scale(0.8);
                 padding: 1px;
+                max-width: 500px;
             }
             html, body{
                 background: lightgray;
@@ -210,6 +211,9 @@
             }
             .images{
                 margin: 10px;
+            }
+            #dodgeGame{
+                text-align: center;
             }
         </style>
         <script src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
