--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 transform: scale(0.8);
                 padding: 1px;
                 max-width: 500px;
-                text-align: center;
+                margin: 20px auto;
             }
             html, body{
                 background: lightgray;
