--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 }
             }
             #title{
-                background-image: url('https://cdn.mos.cms.futurecdn.net/2LVWjEV65antgXRgEAXJRb.jpg');
+                background-image: url('https://images.unsplash.com/photo-1457269449834-928af64c684d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');
                 background-size: 100%;
                 background-position: center;
                 height: 88vh;
@@ -89,7 +89,7 @@
             .cards-section{
                 background: white;
                 transform: scale(0.8);
-                padding: 1px;
+                padding: 10px;
                 max-width: 500px;
                 margin: 20px auto;
             }
