--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 if(counter > backgrounds.length-1){
                     counter = 0;
                 }
-                document.getElementById("title").style.backgroundImage = url(backgrounds[counter]); 
+                document.getElementById("title").style.backgroundImage = "url('" + backgrounds[counter] + "')"); 
             }, 1000)
         </script>
     
