--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <link rel="icon" type="image/*" href="https://cdn.kastatic.org/images/avatars/svg/leaf-blue.svg">
         <meta charset="utf-8">
-        <title>Winter.com</title>
+        <title>Winter ©2021</title>
         <style>
             * {
                 box-sizing: border-box;
