--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 background-image: url('https://images.unsplash.com/photo-1489674267075-cee793167910?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');
                 background-size: 100%;
                 background-position: center;
+                max-width: 100%;
+                height: auto;
                 height: 88vh;
                 display: flex;
                 justify-content: center;
@@ -212,6 +214,8 @@
             }
             .images{
                 margin: 10px;
+                max-width: 100%;
+                height: auto;
             }
             #dodgeGame{
                 text-align: center;
