--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             }
             .button{
                 color: blue;
+                position: absolute;
                 background: rgb(195, 195, 195);
                 border: 2px solid blue;
                 padding: 1vh 2.7vw;
