--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
             }
             .button{
                 color: blue;
+                /**/
                 position: absolute;
+                top: 50%;
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+                /**/
                 background: rgb(195, 195, 195);
                 border: 2px solid blue;
                 padding: 1vh 2.7vw;
