--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <!--About-->
     <div class="page">
         <h1 class="pages_titles">About</h1>
-        <p style="font-size: 18px">I started coding in the fall of 2020. I was a noob at first but then I started getting better. Right now I would rate myself to be an intermediate programmer. Here are a couple of computer languages I know:
+        <p style="font-size: 18px">I found out about coding through my older brother. That was around the fall of 2020. I started on Khan Academy (A non-profit educational orginization founded in 2008 by Sal Khan). I learned Processing.js and a little bit of HTML and CSS on Khan Academy. I participated in many coding competitions. As I continued my coding journey I found out about w3schools. I mastered HTML, CSS, and JS on w3schools. Time passed and I found out about p5.js. Currently, I am learning Data Structure on freecodecamp. Here are a couple of computer languages I know:
         <div align="center">
             <img class="images" src="https://play-lh.googleusercontent.com/85WnuKkqDY4gf6tndeL4_Ng5vgRk7PTfmpI4vHMIosyq6XQ7ZGDXNtYG2s0b09kJMw" width="82.5x">
             <img class="images" src="https://alwarg.gallerycdn.vsassets.io/extensions/alwarg/css-class-builder/0.0.1/1625206357042/Microsoft.VisualStudio.Services.Icons.Default" width="82.5px">
