--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <link rel="icon" type="image/*" href="https://cdn.kastatic.org/images/avatars/svg/leaf-blue.svg">
         <meta charset="utf-8">
-        <title>Winter ©2021</title>
+        <title>VanadiumDev ©2021-CURRENT</title>
         <style>
             * {
                 box-sizing: border-box;
@@ -225,7 +225,7 @@
     </head>
     <body>
         <div id="title">
-            <h1>Winter.com</h1>
+            <h1>VanadiumDev</h1>
         </div>
         
         <script>
