--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 background: gray;
                 padding: 20px;
                 width: 100%;
+                display: block;
             }
             #cards button {
                 display: block;
