--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 }
             }
             #title{
-                background-image: url('https://images.unsplash.com/photo-1489674267075-cee793167910?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');
+                background-image: url("https://media.istockphoto.com/photos/vanadium-v-chemical-element-3d-rendering-isolated-on-black-background-picture-id922705070?b=1&k=20&m=922705070&s=170667a&w=0&h=3z7Szl4qyrmday44jbBDNpvx2SE_zAfCHW3D-n1MM-Y=");
                 background-size: 100%;
                 background-position: center;
                 max-width: 100%;
@@ -229,7 +229,14 @@
         </div>
         
         <script>
-            let backgrounds = ["https://images.unsplash.com/photo-1489674267075-cee793167910?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80", "https://images.unsplash.com/photo-1485433592409-9018e83a1f0d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=421&q=80", "https://images.unsplash.com/photo-1547754980-3df97fed72a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80", "https://images.unsplash.com/photo-1486496146582-9ffcd0b2b2b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80", "https://images.unsplash.com/photo-1520262454473-a1a82276a574?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80", "https://images.unsplash.com/photo-1482331336918-c80fab6c90f2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80", "https://images.unsplash.com/photo-1504952763299-66ca4fcb05b3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80", "https://images.unsplash.com/photo-1484278786775-527ac0d0b608?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=761&q=80", "https://images.unsplash.com/photo-1455156218388-5e61b526818b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80", "https://images.unsplash.com/photo-1593435713463-e8bf5bea9786?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80", "https://images.unsplash.com/photo-1518627675569-e9d4fb90cdb5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80", "https://images.unsplash.com/photo-1545586860-95d2040c1680?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"]
+            let backgrounds = [
+                "https://media.istockphoto.com/photos/vanadium-v-chemical-element-3d-rendering-isolated-on-black-background-picture-id922705070?b=1&k=20&m=922705070&s=170667a&w=0&h=3z7Szl4qyrmday44jbBDNpvx2SE_zAfCHW3D-n1MM-Y=",
+                "https://media.istockphoto.com/photos/vanadium-metal-crystal-isolated-picture-id1248505003?b=1&k=20&m=1248505003&s=170667a&w=0&h=6T_mN4bwmcY3sAsDlFBsXuJkcFr2RoG7EtltB9Mbvig=",
+                "https://media.istockphoto.com/photos/metal-bolts-and-nuts-on-wooden-background-picture-id1310721481?b=1&k=20&m=1310721481&s=170667a&w=0&h=1DN8nyXmeYfbdgYc7u3dDqQxbMOxefQZU3F1wz-X0Lo=",
+                "https://media.istockphoto.com/photos/concept-of-energy-storage-system-renewable-energy-photovoltaics-wind-picture-id950739780?b=1&k=20&m=950739780&s=170667a&w=0&h=bHjzYVbymmXLLy6dZpVMsUDTUWetDAeeAG-oQ7EazrI=",
+                "https://media.istockphoto.com/photos/vanadinite-from-morocco-on-white-background-picture-id131861372?b=1&k=20&m=131861372&s=170667a&w=0&h=sssP4PewOgx78BsoA99UeJwWUi61lqUQSfdPFrNxalQ=",
+                "https://media.istockphoto.com/photos/vanadium-chemical-element-picture-id1131975762?k=20&m=1131975762&s=612x612&w=0&h=uZ6seqJkEthBAYl6FtVIUp9jL1jyRxIgivRTrXJsQpo="
+            ]
             let counter = 0;
             setInterval(function(){ 
                 counter++;
