--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 }
             }
             #title{
-                background-image: url("https://media.istockphoto.com/photos/vanadium-v-chemical-element-3d-rendering-isolated-on-black-background-picture-id922705070?b=1&k=20&m=922705070&s=170667a&w=0&h=3z7Szl4qyrmday44jbBDNpvx2SE_zAfCHW3D-n1MM-Y=");
+                background-image: url("https://media.istockphoto.com/photos/binary-code-background-picture-id1046046242?s=612x612");
                 background-size: 100%;
                 background-position: center;
                 max-width: 100%;
@@ -230,12 +230,10 @@
         
         <script>
             let backgrounds = [
-                "https://media.istockphoto.com/photos/vanadium-v-chemical-element-3d-rendering-isolated-on-black-background-picture-id922705070?b=1&k=20&m=922705070&s=170667a&w=0&h=3z7Szl4qyrmday44jbBDNpvx2SE_zAfCHW3D-n1MM-Y=",
-                "https://media.istockphoto.com/photos/vanadium-metal-crystal-isolated-picture-id1248505003?b=1&k=20&m=1248505003&s=170667a&w=0&h=6T_mN4bwmcY3sAsDlFBsXuJkcFr2RoG7EtltB9Mbvig=",
-                "https://media.istockphoto.com/photos/metal-bolts-and-nuts-on-wooden-background-picture-id1310721481?b=1&k=20&m=1310721481&s=170667a&w=0&h=1DN8nyXmeYfbdgYc7u3dDqQxbMOxefQZU3F1wz-X0Lo=",
-                "https://media.istockphoto.com/photos/concept-of-energy-storage-system-renewable-energy-photovoltaics-wind-picture-id950739780?b=1&k=20&m=950739780&s=170667a&w=0&h=bHjzYVbymmXLLy6dZpVMsUDTUWetDAeeAG-oQ7EazrI=",
-                "https://media.istockphoto.com/photos/vanadinite-from-morocco-on-white-background-picture-id131861372?b=1&k=20&m=131861372&s=170667a&w=0&h=sssP4PewOgx78BsoA99UeJwWUi61lqUQSfdPFrNxalQ=",
-                "https://media.istockphoto.com/photos/vanadium-chemical-element-picture-id1131975762?k=20&m=1131975762&s=612x612&w=0&h=uZ6seqJkEthBAYl6FtVIUp9jL1jyRxIgivRTrXJsQpo="
+                "https://media.istockphoto.com/photos/binary-code-background-picture-id1046046242?s=612x612",
+                "https://media.istockphoto.com/photos/coding-software-concept-developer-working-on-code-picture-id1284552053?s=612x612",
+                "https://media.istockphoto.com/vectors/web-design-browser-vector-id887814862?s=612x612",
+                "https://media.istockphoto.com/vectors/young-programmer-coding-a-new-project-vector-id513544018?s=612x612",
             ]
             let counter = 0;
             setInterval(function(){ 
