Spell check and faster story slides
You really need to use less vertexes man, there are better ways to do these things.

--- a/wingsoffire.html
+++ b/wingsoffire.html
@@ -22,11 +22,11 @@
 var scene = "home";
 var speed = 6;
 var maxTexts = Infinity;
-var duration = 800;
+var duration = 700;
 var texts = [
     "Your name is Clay and you are a MudWing \n living and hiding with the Talons of Peace.",
     "You live with Tsunami the SeaWing, \nGlory the RainWing, Starflight the NightWing,\n and Sunny The peculiar SandWing.",
-    "Your menors are Kestrel the SkyWing, \nDune the SandWing, and Webs The SeaWing.",
+    "Your mentors are Kestrel the SkyWing, \nDune the SandWing, and Webs The SeaWing.",
 "Learn fighting with Kestrel, history with Webs, \n and learn hunting and survival with Dune.",
     "Train as much as you can until \nyou learn enough to be ready to face dragons\nin Scarlet's arena.",
 ];
